--- a/client/ui/login_window.ui
+++ b/client/ui/login_window.ui
@@ -24,7 +24,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel#label {
-	border-image: url(&quot;:res/worms_background.png&quot;)
+	border-image: url(&quot;:imagenes/worms_background.png&quot;)
 }
 
 /* Estilo para QPushButton (Botones) */
