Usuario que crea partida se une directamente y el que se une y no la crea no puede comenzarla

--- a/client/lobby/ui/crear_partida.ui
+++ b/client/lobby/ui/crear_partida.ui
@@ -199,7 +199,7 @@ QMessageBox {
        <item>
         <widget class="QPushButton" name="crear">
          <property name="text">
-          <string>Crear</string>
+          <string>Unirse</string>
          </property>
         </widget>
        </item>
