--- a/client/lobby/ui/sala_espera.ui
+++ b/client/lobby/ui/sala_espera.ui
@@ -80,7 +80,7 @@ QLabel#label {
        <item row="0" column="1">
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>Esperando Jugadores...</string>
+          <string>Presiona el boton para unirse</string>
          </property>
         </widget>
        </item>
@@ -115,7 +115,7 @@ QLabel#label {
      <item row="1" column="0">
       <widget class="QPushButton" name="pushButton">
        <property name="text">
-        <string>Comenzar</string>
+        <string>Unirse</string>
        </property>
       </widget>
      </item>
