Se cambia el ui de crear partida para ponerle nombre a la partida

--- a/client/lobby/ui/crear_partida.ui
+++ b/client/lobby/ui/crear_partida.ui
@@ -135,7 +135,7 @@ QMessageBox {
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Nombre jugador</string>
+            <string>Nombre de la partida</string>
            </property>
           </widget>
          </item>
